samples/_failures_safe/1761616316_6441a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b4b7382.c: In function ‘main’:
./samples/SAFE/__tmp_7b4b7382.c:163:9: error: expected declaration or statement at end of input
  163 |         printf("No valid words found in the input.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_7b4b7382.c:163:9: error: expected declaration or statement at end of input
